- Includes en absolu - Ajout des langues en (anglais) et zh (chinois) - Ajout de la variable Code dans la langue pour spécifier le code à mettre dans le document HTML

--- a/lang/fr/lang.ini
+++ b/lang/fr/lang.ini
@@ -1,3 +1,6 @@
+; Code de la langue
+Code = fr
+
 ; Noms des pages spéciales dans votre template
 DefaultPage = Accueil
 ListPage = Toutes les pages
