Probleme avec la nouvelle feuille de style dans Safari

--- a/lang/zh/lang.ini
+++ b/lang/zh/lang.ini
@@ -1,4 +1,4 @@
-﻿; Code de la langue
+; Code de la langue
 Code = zh
 
 ; Noms des pages spéciales dans votre template
@@ -17,7 +17,7 @@ HistoryTitle = 历史 :
 ; Noms de boutons
 Edit = 编辑页
 History = 保存
-Back = 事先查看 ou 回去最初的页
+Back = 回去最初的页
 Preview = 事先查看
 Save = 恢复
 Restore = 恢复
