Le thème menu utilise maintenant une variable de la langue pour le nom de la page menu

--- a/lang/en/lang.ini
+++ b/lang/en/lang.ini
@@ -5,6 +5,7 @@ Code = en
 DefaultPage = Home
 ListPage = All pages 
 ChangesPage = Recent changes
+MenuPage = Menu
 
 ; Qu'est-ce qu'on affiche si la page est vide ?
 NoWikiContent = This page is empty
