--- a/lang/es/lang.ini
+++ b/lang/es/lang.ini
@@ -5,6 +5,7 @@ Code = es
 DefaultPage = Portada
 ListPage = Todas las páginas
 ChangesPage = Cambios recientes
+MenuPage = Menú
 
 ; Qu'est-ce qu'on affiche si la page est vide ?
 NoWikiContent = Esta página no tiene ninguna información.
