--- a/lang/fr/lang.ini
+++ b/lang/fr/lang.ini
@@ -5,6 +5,7 @@ Code = fr
 DefaultPage = Accueil
 ListPage = Toutes les pages
 ChangesPage = Changements récents
+MenuPage = Menu
 
 ; Qu'est-ce qu'on affiche si la page est vide ?
 NoWikiContent = Cette page ne contient aucune information
