--- a/lang/zh/lang.ini
+++ b/lang/zh/lang.ini
@@ -5,6 +5,7 @@ Code = zh
 DefaultPage = 欢迎
 ListPage = 什么都页
 ChangesPage = 最近改变
+MenuPage = 菜单
 
 ; Qu'est-ce qu'on affiche si la page est vide ?
 NoWikiContent = 这个页空了。。。请编辑 ！
